--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,10 @@ if(CONFIG_HAS_NORDIC_DRIVERS)
 endif()
 
 if(CONFIG_HAS_NRFX)
+  if(NOT CONFIG_BOARD_NRF52_BSIM)
+  # Remove this path to allow including hal from someone else
   zephyr_include_directories(nrfx)
+  endif()
   zephyr_include_directories(nrfx/drivers/include)
   zephyr_include_directories(nrfx/mdk)
   zephyr_include_directories(.)
@@ -31,7 +34,9 @@ if(CONFIG_HAS_NRFX)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52810       nrfx/mdk/system_nrf52810.c)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52811       nrfx/mdk/system_nrf52811.c)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52820       nrfx/mdk/system_nrf52820.c)
+  if(NOT CONFIG_BOARD_NRF52_BSIM)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52832       nrfx/mdk/system_nrf52.c)
+  endif()
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52833       nrfx/mdk/system_nrf52833.c)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF52840       nrfx/mdk/system_nrf52840.c)
   zephyr_library_sources_ifdef(CONFIG_SOC_NRF5340_CPUAPP nrfx/mdk/system_nrf5340_application.c)
